--- a/BMI Calculator/Views/Base.lproj/Main.storyboard
+++ b/BMI Calculator/Views/Base.lproj/Main.storyboard
@@ -123,6 +123,10 @@
                             <constraint firstAttribute="trailing" secondItem="DpU-Gs-T27" secondAttribute="trailing" id="wXv-E8-Ye0"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="heightLabel" destination="Xcz-1j-2c9" id="KnB-fM-Wjr"/>
+                        <outlet property="weightLabel" destination="LTF-aL-8qu" id="V3j-Bu-lJo"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
